Fix horizontal alignment of data grid header text and sort hints

--- a/src/Resources/public/css/shuwee_admin/base.css
+++ b/src/Resources/public/css/shuwee_admin/base.css
@@ -374,6 +374,7 @@
 .datagrid thead th a span {
   opacity: 0.4;
   float: right;
+  line-height: inherit;
 }
 
 .small-only table.datagrid {
