--- a/src/Resources/public/scss/components/_datagrid.scss
+++ b/src/Resources/public/scss/components/_datagrid.scss
@@ -43,6 +43,7 @@
         span {
           opacity: 0.4;
           float: right;
+          line-height: inherit;
         }
       }
     }
